Fix upcoming races table wrapping

--- a/src/app/views/races/upcoming/upcoming.component.scss
+++ b/src/app/views/races/upcoming/upcoming.component.scss
@@ -11,3 +11,11 @@ a {
 h1 {
   margin: 0;
 }
+
+.table-wrapper {
+  overflow-x: auto;
+}
+
+.mat-column-start-time {
+  white-space: nowrap;
+}
